Refactor: Correção do ciclo de vida de aluno