@@ -1,6 +1,8 @@
 package com.senai.controle_de_acesso_spring.application.service;
 
 import com.senai.controle_de_acesso_spring.application.dto.users.AlunoDto;
+import com.senai.controle_de_acesso_spring.application.dto.users.UsuarioDto;
+import com.senai.controle_de_acesso_spring.domain.model.entity.usuarios.Usuario;
 import com.senai.controle_de_acesso_spring.domain.model.entity.usuarios.aluno.Aluno;
 import com.senai.controle_de_acesso_spring.domain.repository.AlunoRepository;
 import lombok.RequiredArgsConstructor;
@@ -8,6 +10,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -16,24 +19,21 @@ public class AlunoService {
     @Autowired
     private AlunoRepository alunoRepository;
 
-    public void cadastrarAluno(AlunoDto dto){
-        Aluno aluno = new Aluno();
-
-        aluno.setNome(dto.nome());
-        aluno.setCpf(dto.cpf());
-        aluno.setDataNascimento(dto.dataNascimento());
-        aluno.setIdAcesso(dto.idAcesso());
-        aluno.setEmail(dto.email());
+    public void cadastrarAluno(AlunoDto alunoDto){
+        alunoRepository.save(alunoDto.fromDTO());
     }
 
-    public List<AlunoDto> listarAlunos(){
-        return alunoRepository.findAll().stream().map(aluno -> new AlunoDto(
-                aluno.getNome(),
-                aluno.getCpf(),
-                aluno.getDataNascimento(),
-                aluno.getIdAcesso(),
-                aluno.getEmail()
-        )).toList();
+    public List<AlunoDto> listarAlunosAtivos(){
+       return alunoRepository.findByAtivoTrue().stream().map(AlunoDto::toDTO).collect(Collectors.toList());
     }
+
+    public Optional<AlunoDto> buscarPorId(Long id, AlunoDto alunoDto){
+        return alunoRepository.findById(id).map(alunoAntigo ->{
+            Aluno alunoAtualizado = alunoDto.fromDTO();
+            alunoAntigo.setNome(alunoAtualizado.getNome());
+        })
+    }
+
+
 
 }
